--- a/docs/08.03 - Monitoring-Azure-DevOps - Orchestrating Deployments and Automating Release Notes.md
+++ b/docs/08.03 - Monitoring-Azure-DevOps - Orchestrating Deployments and Automating Release Notes.md
@@ -28,31 +28,37 @@ https://docs.microsoft.com/en-us/azure/devops/service-hooks/overview?view=azure-
 
 ## Microsoft Teams, Continuous Collaboration and Integration
 
-[Microsoft Teams integration with Azure DevOps](https://www.azuredevopslabs.com/labs/vstsextend/teams/) has quickly grown into one of my favorite features. [Azure DevOps dashboards and kanban boards can be added to channels for visualizations of progress](https://docs.microsoft.com/en-us/azure/devops/boards/integrations/boards-teams?view=azure-devops). Multiple Azure DevOps bots can be configured to deliver messages to and from Microsoft Teams to allow for continuous collaboration across multiple teams and channels. These bots can work with [Azure Pipelines](https://docs.microsoft.com/en-us/azure/devops/pipelines/integrations/microsoft-teams?view=azure-devops), [work items](https://docs.microsoft.com/en-us/azure/devops/boards/integrations/boards-teams?view=azure-devops) and [code pull requests](https://docs.microsoft.com/en-us/azure/devops/repos/integrations/repos-teams?view=azure-devops).
+ has quickly grown into one of my favorite features. [Azure DevOps dashboards and kanban boards can be added to channels for visualizations of progress](https://docs.microsoft.com/en-us/azure/devops/boards/integrations/boards-teams?view=azure-devops). 
 
-| Work Items                                                   | Code                                                         | Pull Requests                                                |
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/WorkItems-Dashboard-TeamsEmbedded.JPG" style="zoom:50%;" />
+
+Multiple Azure DevOps bots can be configured to deliver messages to and from Microsoft Teams to allow for continuous collaboration across multiple teams and channels. These bots can work with [Azure Pipelines](https://docs.microsoft.com/en-us/azure/devops/pipelines/integrations/microsoft-teams?view=azure-devops), [work items](https://docs.microsoft.com/en-us/azure/devops/boards/integrations/boards-teams?view=azure-devops) and [code pull requests](https://docs.microsoft.com/en-us/azure/devops/repos/integrations/repos-teams?view=azure-devops).
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/Teams-Azure-DevOps-Bots.JPG"  />
+
+| Work Items                                                   | Code                                                         | Pipelines                                                    |
 | ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
-| <img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/DevOps/Teams-Azure-Pipelines-Subscriptions.JPG" style="zoom:50%;" /> | <img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/DevOps/Teams-Azure-Pipelines-Subscriptions.JPG" style="zoom:50%;" /> | <img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/DevOps/Teams-Azure-Pipelines-Subscriptions.JPG" style="zoom:50%;" /> |
+| <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/Teams.DevOps.Boards.png" style="zoom:50%;" /> | <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/Teams.DevOps.Code.png" style="zoom:50%;" /> | <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/Teams.DevOps.Pipelines.png" style="zoom:50%;" /> |
 
-Subscriptions
+For monitoring and orchestrating deployments across our various teams, the Azure Pipelines bot is essential. Let's begin by setting up subscriptions to monitor a release pipeline.
 
-Use the "subscriptions" keyword to review and modify existing subscriptions and add new ones. 
+**<u>NOTE: The rest of this document will be using a release pipeline as an example, but this will also work with multi-stage build pipelines that utilize environments.</u>**
+
+### Configuring the Azure Pipelines Bot in Microsoft Teams
+
+Use the "subscriptions" keyword  with the Azure Pipelines bot to review and modify existing subscriptions and add new ones. 
 
 <img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/DevOps/Teams-Azure-Pipelines-Subscriptions.JPG" style="zoom:50%;" />
 
-Add, Remove
-
-Filter
+In the above example, we are subscribing to any changes in stages or approvals for a specific release pipeline. Its recommend to filter to a specific pipeline to reduce clutter in our Teams messaging. The Azure Pipeline bot, using actions described in the article "", can be further filtered by build statuses. This is helpful to isolate the messages delivered to a specific Teams channel.
 
 <img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/DevOps/Teams-Azure-Pipelines-Subscriptions-Filter.JPG" style="zoom:50%;" />
 
-Notification threads
-
-Commands
+Once configured, as soon as our pipeline begins to run, Microsoft Teams will begin to receive messages. Below is an example showing the deployment of a specific release including stages and approval requests. What I find nice about this is that Microsoft Teams works on both my mobile devices and even Linux based operating systems, allowing any team on any workload to utilize this approach.
 
 <img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/DevOps/Teams-Azure-Pipelines-Notifications-Thread-GatedApproval.JPG" style="zoom:50%;" />
 
-Azure DevOps also has the ability to natively integrate with other 3rd party tools such as [Slack](https://docs.microsoft.com/en-us/azure/devops/pipelines/integrations/slack?view=azure-devops) (Similar to the Teams bots), [ServiceNow](https://docs.microsoft.com/en-us/azure/devops/pipelines/release/approvals/servicenow?view=azure-devops) and [Jenkins](https://docs.microsoft.com/en-us/azure/devops/pipelines/release/integrate-jenkins-pipelines-cicd?view=azure-devops&tabs=yaml).
+I also want to point out that Azure DevOps also has the ability to natively integrate with other 3rd party tools such as [Slack](https://docs.microsoft.com/en-us/azure/devops/pipelines/integrations/slack?view=azure-devops) (Similar to the Teams bots), [ServiceNow](https://docs.microsoft.com/en-us/azure/devops/pipelines/release/approvals/servicenow?view=azure-devops) and [Jenkins](https://docs.microsoft.com/en-us/azure/devops/pipelines/release/integrate-jenkins-pipelines-cicd?view=azure-devops&tabs=yaml).
 
 ## Release Pipelines
 
@@ -64,9 +70,13 @@ Deployments within a release pipeline allow for numerous ways to integrate monit
 
 ##### Approvals
 
-Pre and Post approvals can be added to each job in the release pipeline. Adding these can assist during a complex deployment requiring coordination between multiple teams dispersed geographically. Shown below is a hypothetical setup of multiple teams each with specific deliverables as part of a release. In this scenario, a core solution needs to be deployed and installed before relying features can begin. When any of the steps in the delivery process begins, the originating team needs to be notified in case of any issues that come up. Using approvals allows the lead of the specific feature team to align the resources and communicate to the broader team that the process can move forward.
+Pre and Post approvals can be added to each job in the release pipeline. Adding these can assist during a complex deployment requiring coordination between multiple teams dispersed geographically. Shown below is a hypothetical setup of multiple teams each with specific deliverables as part of a release. 
 
-<img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/DevOps/Teams-Overview.JPG" style="zoom:80%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/Environment.Checks.Overview.PNG" style="zoom:50%;" />
+
+In this scenario, a core solution needs to be deployed and installed before relying features can begin. When any of the steps in the delivery process begins, the originating team needs to be notified in case of any issues that come up. Using approvals allows the lead of the specific feature team to align the resources and communicate to the broader team that the process can move forward.
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/Teams-Overview.JPG" style="zoom:50%;" />
 
 Here is an example of an approval within Microsoft Teams, notifying the lead of the core solution team that the import process is ready. The approval request shows the build artifacts (e.g. solutions, code files, etc), the branch and pipeline information.
 
@@ -76,37 +86,31 @@ Here is an example of an approval within Microsoft Teams, notifying the lead of 
 
 At the heart of a gated deployment approach is the ability to search for inconsistencies or negative signals to minimize unwanted impact further in the process. These gates, which can be set to run before or after a deployment job, allow us to query for potential issues and alerts. They also could be used to notify or perform an operation on an external system.
 
-<insert gate image>
-
-<img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/DevOps/Teams-Azure-Pipelines-Notifications-Thread-GatedApproval-Filtered-Team.JPG" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/DevOps/ReleasePipeline-PreDeployment-ReleaseGates.JPG" style="zoom:50%;" />
 
 ##### Queries and Alerts
 
-Deployment gates provide the ability to run queries on work items within your Azure DevOps project. For instance this allows release coordinators and deployment managers to check for bugs reported from automated testing using RSAT or EasyRepro. These queries are created within the Work Items area of Azure DevOps. From there they are referenced within the pipeline and based on the data returned, upper and lower thresholds can be set. If these thresholds are crossed, the gate condition is not satisified and the process will halt until corrections are made.
+Deployment gates provide the ability to run queries on work items within your **Azure DevOps** project. For instance this allows release coordinators and deployment managers to check for bugs reported from automated testing using RSAT for **Dynamics 365 F&O** or EasyRepro for **Dynamics 365 CE**. These queries are created within the Work Items area of **Azure DevOps**. From there they are referenced within the pipeline and based on the data returned, upper and lower thresholds can be set. If these thresholds are crossed, the gate condition is not satisified and the process will halt until corrections are made.
 
 ##### External Integrations
 
-As mentioned above Azure Function is natively integrated within deployment gates for Release Pipelines. These can be used for both a pre condition and post condition to report or check on external systems. This could be used within the Power Platform to query the CDS API or run Power Automate flows. An example could be to query the CDS API for running asynchronous jobs, creating activities within a Dynamics organization or admin actions such as enabling Admin mode. Another could be to use the robust approval process built in Power Automate for pre and post approvals. 
+As mentioned above **Azure Function** is natively integrated within deployment gates for **Release Pipelines**. **<u>These can be used for both a pre condition and post condition to report or integrate with external systems</u>**. 
 
-#### Deployment Tasks
+Deployment gates can also **invoke REST API endpoints**. **<u>This could be used within the Power Platform to query the CDS API or run Power Automate flows.</u>** An example could be to query the **Common Data Service** for running asynchronous jobs, creating activities within a **Dynamics 365** environment or admin actions such as **enabling Admin mode**. Another could be to use the robust approval process built in **Power Automate** for pre and post approvals outside of the **Azure DevOps** licensed user base. 
 
-As with Build Pipelines we can send HTTP requests which allow integrations to hundreds of endpoints using the platform of your choosing. If you're a designer perhaps you use Logic Apps with a HTTP trigger to broadcast event information. If you're more of a pro dev you may leverage PowerShell, Service Fabric, etc for more complex scenarios. This also opens us up to Bot or chat capabilities for constant communication of real time events.
 
-##### Azure Application Insights Release Annotations
 
-The Azure Application Insights Release Annotations task is a marketplace extension from Microsoft allowing a release pipeline to signal an event in a release pipeline. An event could be the start of the pipeline, the end, or any event we are interested in. From here we can use native functionality of Application Insights to stream metrics and logs.
+## Using Build Pipelines or Release Pipelines
 
-## Build Environments
+In the previous section I described how to introduce quality gates to a release securing each stage of the pipeline. Release pipelines are useful
+
+### Environments
+
+[Environments](https://docs.microsoft.com/en-us/azure/devops/pipelines/process/environments?view=azure-devops) in Azure DevOps allow for **<u>targeted deployment of artifacts to a collection of resources</u>**. In the case of the **Power Platform**, this can be thought of **<u>a release to an Power Platform environment</u>**. The use of pipeline environments is optional, that is unless you begin work using Release pipelines which do require environments. Two of the main advantages of environments are deployment history and security and permissions.
 
 ### Scenario: Securing Current Deployments
 
 In this scenario, we will attempt to secure our Power Platform environment using security checks and policies. With build environments we can configure conditions such as only releasing during specific time frames, approvals from stakeholders, azure function responses or even requiring templates and tasks. In the below example, we will require three conditions to be met before releasing to an environment: Approvals from team members, required extends templates and artifact policy enforcement.
-
-### Environments
-
-[Environments](https://docs.microsoft.com/en-us/azure/devops/pipelines/process/environments?view=azure-devops) in Azure DevOps allow for **<u>targeted deployment of artifacts to a collection of resources</u>**. In the case of the **Power Platform**, this can be thought of **<u>a release to an Power Platform environment</u>**. The use of pipeline environments is optional, that is unless you begin work using Release pipelines which do require environments. Two of the main advantages of environments are deployment history and security and permissions. Using the [Azure DevOps REST API for Environments](https://docs.microsoft.com/en-us/rest/api/azure/devops/distributedtask/environmentdeployment%20records/list?view=azure-devops-rest-6.0) we can evaluate both...mostly.
-
-[https://docs.microsoft.com/en-us/rest/api/azure/devops/distributedtask/environmentdeployment%20records/list?view=azure-devops-rest-6.0](https://docs.microsoft.com/en-us/rest/api/azure/devops/distributedtask/environmentdeployment records/list?view=azure-devops-rest-6.0)
 
 ### Environment Security Checks
 
@@ -118,26 +122,11 @@ Compare this to the Release Pipeline Pre or Post Deployment Quality Gates.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/ReleasePipeline-PreDeployment-ReleaseGates.JPG" style="zoom: 67%;" />
 
-#### Environment Deployment History and 
-
 Environments allow DevOps administrators the ability to review and manage each deployment. With this control also comes auditing of previous deployments allowing insight into trends and potential vulnerabilities. 
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/Environment.RequiredTemplate.GitHubSourced.PNG" style="zoom:50%;" />
 
-Each attempted deployment to an environment includes [an execution record](https://docs.microsoft.com/en-us/rest/api/azure/devops/distributedtask/environmentdeployment%20records/list?view=azure-devops-rest-6.0#environmentdeploymentexecutionrecord) that can expose [stage](https://docs.microsoft.com/en-us/azure/devops/pipelines/process/stages?view=azure-devops&tabs=yaml) (orchestrations and divisions) and [job](https://docs.microsoft.com/en-us/azure/devops/pipelines/process/phases?view=azure-devops&tabs=yaml) (sequential tasks) details. Below is an example of a PowerShell script to request deployment records on a specific environment.
-
-```
-$environmentDeploymentRecordsUrl = "$($devopsBaseUrl)$($projectId)/_apis/distributedtask/environments/$($envirommentId)/environmentdeploymentrecords?$($apiVersion)"
-$environmentDeploymentRecords = Invoke-RestMethod -Uri $environmentDeploymentRecordsUrl -Method Get -ContentType "application/json" -Headers $header
-```
-
-For each deployment record we can find out a wealth of information. Build definitions, plans, stages, jobs are all shown. The start and finish timings and statuses are also shown, helping engineers determine where things may have gone wrong.
-
-<insert deployment history powerhsell>
-
-Here is an example showing usage of the Environment and Environment Deployment Record REST API calls. Also included are calls to the Build REST API detailed below.
-
-<insert gif>
+Each attempted deployment to an environment includes [an execution record](https://docs.microsoft.com/en-us/rest/api/azure/devops/distributedtask/environmentdeployment%20records/list?view=azure-devops-rest-6.0#environmentdeploymentexecutionrecord) that can expose [stage](https://docs.microsoft.com/en-us/azure/devops/pipelines/process/stages?view=azure-devops&tabs=yaml) (orchestrations and divisions) and [job](https://docs.microsoft.com/en-us/azure/devops/pipelines/process/phases?view=azure-devops&tabs=yaml) (sequential tasks) details. For each deployment record we can find out a wealth of information. Build definitions, plans, stages, jobs are all shown. The start and finish timings and statuses are also shown, helping engineers determine where things may have gone wrong.
 
 #### Quick Note on Security Checks
 
@@ -147,43 +136,9 @@ Each deployment, that meets security checks, will be included within the executi
 
 In this scenario we can be notified, other checks currently do not allow for flexibility. Feel free to upvote this request to gain traction on adding this to the REST API.
 
-## Tests
+## Automating Release Notes
 
-#### Manual Testing Feedback
+##### Azure Application Insights Release Annotations
 
-#### Automated Feedback
-
-Automating tests use the rich capabilities of release pipelines with Azure DevOps. This means the guidance and tools provided above can also be used within automated testing. Azure Monitor alerts are key feature here allowing the pipeline to report on messaging delivered to Azure Application Insights or Azure Log Analytics from Power Platform tests.
-
-## GitHub Actions
-
-https://developer.github.com/v3/actions/workflow_runs/#list-workflow-run-logs
-
-https://api.github.com/repos/aliyoussefi/D365-Monitoring/actions/runs/562703662/logs
-
-https://developer.github.com/v3/auth/#basic-authentication
-
-curl -v -L -u aliyoussefi:453feade49f5c9acaad2abf8e1293d430957a356 -o logs.zip "https://api.github.com/repos/aliyoussefi/D365-Monitoring/actions/runs/71335697/logs"
-
-
-
-curl -u aliyoussefi:453feade49f5c9acaad2abf8e1293d430957a356 https://api.github.com/user
-
-
-
-Monitoring the Power Platform PAT: b82a1e5a2fd655ec8dcbdda6273486d92a65fa44
-
-
-
-
-
-List Repos:
-
-curl -u aliyoussefi:b82a1e5a2fd655ec8dcbdda6273486d92a65fa44 https://api.github.com/user/repos
-
-
-
-List Repos for User:
-
-curl -u aliyoussefi:b82a1e5a2fd655ec8dcbdda6273486d92a65fa44 https://api.github.com/users/aliyoussefi/repos
+The Azure Application Insights Release Annotations task is a marketplace extension from Microsoft allowing a release pipeline to signal an event in a release pipeline. An event could be the start of the pipeline, the end, or any event we are interested in. From here we can use native functionality of Application Insights to stream metrics and logs.
 
